--- a/index.html
+++ b/index.html
@@ -303,14 +303,14 @@
               alt="logo"
             />
           </div>
-          <div class="footer__column footer__column_hours">
+          <div class="footer__column footer__column_content_hours">
             <h2 class="footer__heading">Hours</h2>
             <ul class="footer__list">
               <li class="footer__list-item">Weekdays: 9am - 8pm</li>
               <li class="footer__list-item">Weekends: 10am - 6pm</li>
             </ul>
           </div>
-          <div class="footer__column footer__column_social">
+          <div class="footer__column footer__column_content_social">
             <h2 class="footer__heading">Social Media</h2>
             <ul class="footer__list">
               <li class="footer__list-item">
@@ -336,7 +336,7 @@
             </ul>
           </div>
         </div>
-        <p class="footer__column-copyrights">© 2022 Shahjahan Sultan</p>
+        <p class="footer__copyright">© 2022 Shahjahan Sultan</p>
         <!-- The time to mark up the footer has come, you can do it 💪 -->
       </footer>
     </div>
